--- a/workspaces/workflow/package.json
+++ b/workspaces/workflow/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@insihts/workflow",
-  "description": "Prodio - SDK for building advanced user onboarding tours. Supports no-code or in-code flows. With advanced features like Wait or Conditional steps to create the ultimate onboarding tour, boosting product adoption. Optimize user journey, increase engagement, and enhance product experiences with Prodio Workflow.",
+  "name": "@oppla-ai/flows",
+  "description": "Oppla AI - SDK for building advanced user onboarding tours. Supports no-code or in-code flows. With advanced features like Wait or Conditional steps to create the ultimate onboarding tour, boosting product adoption. Optimize user journey, increase engagement, and enhance product experiences with Prodio Workflow.",
   "keywords": [
     "react",
-    "insihts",
+    "oppla-ai",
     "prodio",
     "workflow",
     "javascript",
@@ -27,7 +27,7 @@
   "version": "1.0.23",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Prodio-App-Packages/prodio-sdk.git"
+    "url": "git+https://github.com/Oppla-AI-Packages/prodio-sdk.git"
   },
   "publishConfig": {
     "access": "public"
