--- a/workspaces/workflow/package.json
+++ b/workspaces/workflow/package.json
@@ -24,7 +24,7 @@
     "product-adoption",
     "product-tours"
   ],
-  "version": "1.0.23",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Oppla-AI-Packages/prodio-sdk.git"
@@ -37,14 +37,14 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     },
     "./core": {
+      "types": "./dist/core/index.d.ts",
       "import": "./dist/core/index.mjs",
-      "require": "./dist/core/index.js",
-      "types": "./dist/core/index.d.ts"
+      "require": "./dist/core/index.js"
     },
     "./flows.css": "./css.min/flows.css",
     "./vars.css": "./css.min/vars.css",
