--- a/workspaces/e2e/package.json
+++ b/workspaces/e2e/package.json
@@ -9,7 +9,7 @@
     "tsc": "tsc -p tsconfig.json"
   },
   "dependencies": {
-    "@insihts/workflow": "workspace:*"
+    "@oppla-ai/flows": "workspace:*"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.1",
